# C_Project_Format

./: .buildsettings  CMakeLists.txt  build.sh
scripts/: build.py  buildsettings.json
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/sample/: CMakeLists.txt  main.c
